Fixed the Firefox/Ribbon text overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ pre div {
 	position: relative;
 	left: 150px;
 	top: 25px;
-	width: 65%;
+	width: 67%;
 	margin-bottom: 1em;
 	line-height: 1.5;
 }
